--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/reset.css" rel="stylesheet" />
+    <link href="/fonts.css" rel="stylesheet" />
     <link href="/essential.css" rel="stylesheet" />
     <title>store-ssr</title>
   </head>
