добавил разделение на spa и ssr по загрузке

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 
     <!--Обязательное подключение клиента для гидрадации--->
     <script type="module" src="/src/entry-client.ts"></script>
+    <!--ssr-data-->
   </body>
 </html>
