--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <meta name="сopyright" content="Max" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/reset.css" rel="stylesheet" />
-    <link href="/fonts.css" rel="stylesheet" />
-    <link href="/essential.css" rel="stylesheet" />
+    <link href="/styles/reset.css" rel="stylesheet" />
+    <link href="/styles/fonts.css" rel="stylesheet" />
+    <link href="/styles/animations.css" rel="stylesheet" />
+    <link href="/styles/essential.css" rel="stylesheet" />
     <title>store-ssr</title>
   </head>
   <body>
