--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="/styles/reset.css" rel="stylesheet" />
     <link href="/styles/fonts.css" rel="stylesheet" />
     <link href="/styles/animations.css" rel="stylesheet" />
-    <link href="/styles/essential.css" rel="stylesheet" />
+    <!--<link href="/styles/essential.css" rel="stylesheet" />-->
     <title>store-ssr</title>
   </head>
   <body>
