--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="сopyright" content="Max" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>store-ssr</title>
+    <title>ssr</title>
   </head>
   <body>
     <div id="app"><!--ssr-outlet--></div>
